--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,8 @@ img {
 
 .site-navigation-list {
   position: absolute;
-  top: 45px;
-  left: -11px;
+  top: 39px;
+  left: -8px;
 
   display: none;
   width: 145px;
@@ -397,7 +397,7 @@ img {
   text-align: start;
   color: #000000;
 
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 .site-navigation-list-item b::after,
 .site-navigation-submenu-item b::after {
@@ -442,7 +442,7 @@ img {
 }
 
 .site-navigation li {
-  z-index: 1;
+  z-index: 10;
 
   list-style: none;
   line-height: 18px;
@@ -540,9 +540,9 @@ img {
   text-align: center;
 }
 
-.offers-item:hover .offers-preview {
+/* .offers-item:hover .offers-preview {
   z-index: 2;
-}
+} */
 .offers-item:hover .offers-title {
   z-index: 2;
 }
@@ -550,8 +550,14 @@ img {
 .offers-item:hover:after {
   display: block;
 
+  background-color: rgba(255, 255, 255, 0.2);
   cursor: pointer;
 }
+
+
+
+
+
 .offers-item:hover .button-wrapper {
   z-index: 15;
 
@@ -600,13 +606,13 @@ img {
   content: "";
   position: absolute;
   top: -6px;
-  right: -19px;
+  right: -9px;
   bottom: -75px;
   left: -6px;
   z-index: 10;
+  /* display: none; */
 
-  display: none;
-
+  border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
@@ -768,7 +774,7 @@ img {
   box-sizing: border-box;
   margin-top: 10px;
   margin-left: auto;
-  padding: 9px 21px 9px 21px;
+  padding: 9px 27px 9px 21px;
 
   font-weight: 700;
   font-size: 18px;
@@ -852,7 +858,7 @@ img {
   padding-top: 26px;
   padding-right: 10px;
   padding-bottom: 23px;
-  padding-left: 18px;
+  padding-left: 9px;
 
   color: #333333;
 
@@ -868,17 +874,20 @@ img {
 }
 
 .features li {
+  position: relative;
+
   display: flex;
   justify-content: flex-start;
-  width: 535px;
-  margin-top: 21px;
-  margin-left: -10px;
+  margin: 0;
+  padding-top: 21px;
+  padding-left: 55px;
 }
+
+
 .features-list-left,
 .features-list-right {
-  width: 527px;
   margin: 0;
-  margin-top: -1px;
+  margin-top: -2px;
   padding: 0;
 
   list-style: none;
@@ -896,31 +905,35 @@ img {
 }
 .features-icecream::before {
   content: url("../img/ice-cream.svg");
+  position: absolute;
+  top: 7px;
+  left: 0;
 
   display: block;
-  margin-top: -12px;
-  margin-right: 4px;
 }
 .features-partners::before {
   content: url("../img/cow.svg");
+  position: absolute;
+  top: 7px;
+  left: 0;
 
   display: block;
-  margin-top: -13px;
-  margin-right: 13px;
 }
 .features-eco::before {
   content: url("../img/eco.svg");
+  position: absolute;
+  top: 8px;
+  left: 0;
 
   display: block;
-  margin-top: -12px;
-  margin-right: 4px;
 }
 .features-thermo::before {
   content: url("../img/thermometer.svg");
+  position: absolute;
+  top: 7px;
+  left: 0;
 
   display: block;
-  margin-top: -12px;
-  margin-right: 13px;
 }
 
 
@@ -1123,26 +1136,42 @@ img {
   height: 32px;
 
   background-color: transparent;
+  background-repeat: no-repeat;
   border: 3px solid #dae2de;
   border-radius: 50%;
   opacity: 0.8;
 }
 
 
+.tweet {
+  background-image: url("../img/twitter.svg");
+}
+
+.insta {
+  background-image: url("../img/instagram.svg");
+}
+
+.fb {
+  background-image: url("../img/fb.svg");
+}
+
+.vk {
+  background-image: url("../img/vk.svg");
+  background-repeat: no-repeat;
+}
+
+
 
 .social-button:hover {
-  background-color: #ffffff;
+  border: 3px solid rgba(255,255,255,0.7);
+  opacity: 1;
 }
-.social-button:focus {
-  background-color: #e9e9e9;
+
+.social-button:active {
+  box-shadow: inset 0 2px 1px 0 rgba(136,136,136,0.4);
 }
 
 
-.social-button:hover path {
-  background-color: transparent;
-
-  fill: #ffffff;
-}
 
 
 .header-btn-search {
@@ -1912,9 +1941,9 @@ fieldset:nth-child(4) {
   padding: 0 27px;
 }
 
-.offers-item:nth-child(4n) {
+/* .offers-item:nth-child(4n) {
   margin-right: 0;
-}
+} */
 
 
 .blog-news-wrapper {
@@ -2229,6 +2258,9 @@ fieldset:nth-child(4) {
   background-size: 24px 22px;
 }
 
+/* .filter-lbl:disabled {
+  opacity: 0.4;
+} */
 
 .fat-filter-wrapper {
   position: relative;
@@ -2279,6 +2311,17 @@ fieldset:nth-child(4) {
 .fat-select + .filter-fat:hover::before {
   opacity: 1;
 }
+
+
+.toggle:disabled + .filter-lbl:hover::before {
+  opacity: 1;
+}
+.fat-select:disabled + .filter-fat:hover::before {
+  opacity: 1;
+}
+
+
+
 
 .fat-select:checked + .filter-fat::before {
   background-image: url("../img/radio-on.svg");
