--- a/css/style.css
+++ b/css/style.css
@@ -866,7 +866,9 @@ img {
   border-radius: 14px;
 }
 .features-title {
-  margin: 0 auto;
+  margin: 0;
+  margin-bottom: 2px;
+  padding-left: 11px;
 
   font-weight: 500;
   font-size: 24px;
