--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ img {
 
 .offers-list span {
   font-weight: 700;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 45px;
 }
 
@@ -867,6 +867,7 @@ img {
 }
 .features-title {
   margin: 0;
+  letter-spacing: .08px;
   margin-bottom: 2px;
   padding-left: 11px;
 
@@ -1688,6 +1689,13 @@ img {
 
   background-color: #9db1a5;
   border-radius: 50%;
+}
+
+.pagination-item a:active { 
+  color: #323232;
+padding: 5px 10px 5px;
+background-color: #ffffff;
+border-radius: 50%;
 }
 
 .pagination-item-current a {
