--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 img {
-  /* max-width: 100%; */
+  max-width: 100%;
   height: auto;
 }
 
@@ -290,6 +290,29 @@ img {
   background-color: #f8f7f4;
 }
 
+.site-navigation-list-item-first a {
+  padding: 11px 21px 12px;
+    position: relative;
+}
+
+
+
+
+.site-navigation-list-item-first a ::after {
+  content: "";
+  top: 38px;
+  position: absolute;
+  bottom: 0;
+  left: 6px;
+
+  height: 1px;
+  width: calc(100% - 12px);
+ background-color: rgba(53, 53, 53, 0.2);
+}
+
+
+
+
 
 .site-navigation-list a:hover,
 .site-navigation-submenu a:hover {
@@ -349,10 +372,10 @@ img {
 
 .site-navigation-list {
   position: absolute;
-  top: 39px;
+  top: 38px;
   left: -8px;
-
-  display: none;
+  min-height: 171px;
+  /* display: none; */
   width: 145px;
   margin: 0;
   padding: 0;
@@ -385,7 +408,7 @@ img {
   border-radius: 5px;
 }
 
-.site-navigation-list a,
+/* .site-navigation-list a,
 .site-navigation-submenu a {
   display: block;
   width: 104px;
@@ -397,8 +420,24 @@ img {
   text-align: start;
   color: #000000;
 
-  /* border-radius: 5px; */
+
+} */
+
+.site-navigation-list a,
+.site-navigation-submenu a {
+  display: block;
+  width: 104px;
+  /* padding: 9px 20px 7px; */
+  padding: 11px 20px 7px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: start;
+  color: #000000;
+
 }
+
+
 .site-navigation-list-item b::after,
 .site-navigation-submenu-item b::after {
   content: "";
@@ -532,7 +571,7 @@ img {
 
   display: inline-block;
   width: 267px;
-  margin-right: 17px;
+  /* margin-right: 17px; */
   margin-bottom: 33px;
 
   list-style: none;
@@ -610,19 +649,23 @@ img {
   bottom: -75px;
   left: -6px;
   z-index: 10;
-  /* display: none; */
+  display: none;
 
   border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
+
+
+
+
 .button-wrapper {
+  
   position: absolute;
   right: -6px;
   bottom: -71px;
   left: -6px;
   z-index: 2;
-
   display: none;
   padding: 20px 0;
 }
@@ -648,10 +691,8 @@ img {
 
   display: inline-block;
   margin: 10px 5px 0;
-
+  min-height: 44px;
   font-weight: 500;
-  font-weight: 500;
-  font-size: 16px;
   font-size: 16px;
   line-height: 22px;
   vertical-align: top;
@@ -2238,7 +2279,7 @@ fieldset:nth-child(4) {
   bottom: 3px;
 
   display: inline-block;
-  padding-right: 17px;
+  padding-right: 12px;
   padding-left: 29px;
 
   vertical-align: top;
