--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ img {
 .slide-title {
   display: block;
   width: 678px;
-  margin: 0 auto 28px;
+  margin: 0 auto 30px;
 
   font-weight: 700;
   font-size: 60px;
@@ -116,7 +116,7 @@ img {
 
 .slider-button {
   display: inline-block;
-  margin-bottom: 42px;
+  margin-bottom: 40px;
   padding: 12px 44px;
 
   font-weight: 700;
@@ -358,7 +358,7 @@ img {
   top: 44px;
 
   display: none;
-  width: 145px;
+  width: 144px;
   margin: 0;
   padding: 5px;
   padding: 0;
@@ -378,7 +378,7 @@ img {
   left: -8px;
 
   display: none;
-  width: 145px;
+  width: 144px;
   min-height: 171px;
   margin: 0;
   padding: 0;
@@ -523,6 +523,9 @@ img {
 
 
 .page-header-info {
+  position: relative;
+  top: -5px;
+
   margin-left: auto;
 
   text-align: right;
@@ -533,7 +536,7 @@ img {
   display: block;
   margin-top: 22px;
   margin-right: 25px;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 
   font-weight: 700;
   font-size: 14px;
@@ -679,7 +682,7 @@ img {
 
   display: inline-block;
   min-height: 44px;
-  margin: 10px 5px 0;
+  margin: 9px 5px 0;
 
   font-weight: 500;
   font-size: 16px;
@@ -764,7 +767,7 @@ img {
   width: 560px;
   margin: 0;
   margin-right: 26px;
-  padding: 18px;
+  padding: 14px 20px 24px;
 
   background-color: #a03472;
   background-image: url(../img/deals-1.jpg);
@@ -782,7 +785,7 @@ img {
   width: 560px;
   min-height: 230px;
   margin: 0;
-  padding: 17px;
+  padding: 14px 20px 24px;
 
   background-color: #553017;
   background-image: url("../img/deals-2.jpg");
@@ -799,12 +802,64 @@ img {
   border-radius: 50%;
 }
 
-.deals-button {
+.img-cat {
+  position: relative;
+
+  margin-top: 3px;
+
+  border-radius: 50%;
+}
+
+/* .deals-button {
   display: block;
   box-sizing: border-box;
   margin-top: 10px;
   margin-left: auto;
   padding: 9px 27px 9px 21px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
+
+  background-image: linear-gradient(#f16743, #e74b36);
+  border-radius: 22px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
+  cursor: pointer;
+} */
+
+
+.deals-button-rsb {
+  display: block;
+  align-self: flex-end;
+  box-sizing: border-box;
+  margin-top: auto;
+  margin-right: 1px;
+  padding: 9px 24px 12px 22px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
+
+  background-image: linear-gradient(#f16743, #e74b36);
+  border-radius: 22px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
+  cursor: pointer;
+}
+
+
+.deals-button-choco {
+  display: block;
+  align-self: flex-end;
+  box-sizing: border-box;
+  margin-top: auto;
+  margin-right: 1px;
+  padding: 8px 21px 13px 22px;
 
   font-weight: 700;
   font-size: 18px;
@@ -864,12 +919,12 @@ img {
 .offers-cat {
   position: relative;
 
-  margin-bottom: 60px;
+  margin-bottom: 58px;
 }
 .offers-cat::after {
   content: "";
   position: absolute;
-  bottom: -35px;
+  bottom: -28px;
   left: 12px;
 
   display: block;
@@ -899,8 +954,8 @@ img {
   margin: 0;
   margin-bottom: 2px;
   padding-left: 11px;
+  /* font-weight: 500; */
 
-  font-weight: 500;
   font-size: 24px;
   line-height: 30px;
   letter-spacing: 0.08px;
@@ -912,7 +967,7 @@ img {
   display: flex;
   justify-content: flex-start;
   margin: 0;
-  padding-top: 21px;
+  padding-top: 23px;
   padding-left: 55px;
 }
 
@@ -939,7 +994,7 @@ img {
 .features-icecream::before {
   content: url("../img/ice-cream.svg");
   position: absolute;
-  top: 7px;
+  top: 9px;
   left: 0;
 
   display: block;
@@ -947,7 +1002,7 @@ img {
 .features-partners::before {
   content: url("../img/cow.svg");
   position: absolute;
-  top: 7px;
+  top: 9px;
   left: 0;
 
   display: block;
@@ -955,7 +1010,7 @@ img {
 .features-eco::before {
   content: url("../img/eco.svg");
   position: absolute;
-  top: 8px;
+  top: 9px;
   left: 0;
 
   display: block;
@@ -963,7 +1018,7 @@ img {
 .features-thermo::before {
   content: url("../img/thermometer.svg");
   position: absolute;
-  top: 7px;
+  top: 9px;
   left: 0;
 
   display: block;
@@ -994,7 +1049,7 @@ img {
   box-sizing: border-box;
   width: 531px;
   margin: 0;
-  padding: 33px 1px 25px 21px;
+  padding: 30px 1px 28px 21px;
 
   font-weight: 500;
   font-size: 16px;
@@ -1023,7 +1078,7 @@ img {
 
   box-sizing: border-box;
   width: 560px;
-  padding: 24px 21px 9px 21px;
+  padding: 22px 21px 9px 21px;
 
   color: #000000;
 
@@ -1116,9 +1171,8 @@ img {
 }
 .address-details {
   display: block;
-  margin: 0 3px 19px;
+  padding: 0 2px 17px 0;
 
-  font-size: 18px;
   line-height: 24px;
   color: #323232;
 }
@@ -1236,10 +1290,9 @@ img {
 
 
 .header-btn-search {
-  display: inline-block;
-  width: 17px;
-  height: 17px;
-  padding: 7px 7px 4px 8px;
+  display: flex;
+  width: 32px;
+  height: 32px;
 
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
@@ -1255,7 +1308,7 @@ img {
   flex-direction: row-reverse;
   justify-content: flex-end;
   box-sizing: border-box;
-  width: 100px;
+  width: 97px;
   padding: 5px 5px;
 
   color: #ffffff;
@@ -1271,7 +1324,7 @@ img {
 .enter-wrap {
   display: block;
   box-sizing: border-box;
-  margin-left: 5px;
+  margin-right: 5px;
 
   font-weight: 500;
   font-size: 14px;
@@ -1281,14 +1334,16 @@ img {
 
 .user-navigation-login {
   position: absolute;
-  top: 38px;
-  right: 16px;
-  z-index: 50;
+  top: 35px;
+  right: 19px;
+  z-index: 10;
 
   display: none;
-  width: 262px;
+  box-sizing: border-box;
+  width: 277px;
   padding-top: 20px;
-  padding-bottom: 0;
+  padding-right: 20px;
+  padding-bottom: 20px;
   padding-left: 20px;
 
   background-color: #f8f7f4;
@@ -1319,11 +1374,9 @@ img {
 .user-navigation-links {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-around;
+  flex-wrap: wrap;
   align-items: flex-start;
   margin: 0;
-  padding-right: 24px;
 }
 .user-navigation-links a {
   font-weight: 400;
@@ -1336,13 +1389,11 @@ img {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: center;
 }
 
 .button-enter {
   display: inline-block;
   width: 101px;
-  margin-bottom: 20px;
   padding: 10px 15px;
 
   font-size: 18px;
@@ -1706,7 +1757,7 @@ img {
   content: "»";
 
   display: inline-block;
-  padding: 0 6px 0 8px;
+  padding: 0 6px 0 4px;
 }
 
 
@@ -1790,8 +1841,9 @@ img {
   z-index: 100;
 
   display: none;
-  width: 512px;
-  padding: 20px 14px 22px;
+  box-sizing: border-box;
+  width: 540px;
+  padding: 12px 14px 22px;
 
   background-color: #f8f7f4;
   border-radius: 6px;
@@ -1811,7 +1863,7 @@ img {
 .basket-delete {
   display: block;
   width: 21px;
-  padding: 7px 15px 0 1px;
+  padding: 8px 4px 0 1px;
 
   border-spacing: 0;
 }
@@ -1829,20 +1881,19 @@ img {
   content: url("../img/cross-small.svg");
 
   display: inline-block;
-  padding-top: 6px;
+  padding-top: 8px;
   padding-left: 0;
 }
 
 
 
 .basket-pic {
-  padding: 0;
+  padding: 0 14px 15px 0;
 }
 .basket-name {
   display: block;
-  width: 240px;
-  margin-top: 7px;
-  padding: 8px 0 16px 0;
+  width: 242px;
+  padding: 8px 0 7px 0;
 
   font-weight: 400;
   font-size: 13px;
@@ -1854,12 +1905,12 @@ img {
 }
 .basket-value {
   display: block;
-  margin-right: 25px;
-  padding-left: 15px;
+  margin-right: 17px;
+  padding-left: 13px;
 }
 
 .basket-cost {
-  padding: 15px 0 14px;
+  padding: 24px 0 18px;
 
   font-weight: 700;
   font-size: 15px;
@@ -1891,6 +1942,7 @@ img {
   box-shadow: 0 1px 2px #ac1000;
   cursor: pointer;
 }
+
 
 .complete-btn:hover {
   background: linear-gradient(#f58669, #ec6f5e);
@@ -1953,8 +2005,8 @@ fieldset:nth-child(4) {
 }
 
 .filter-btn {
-  width: 147px;
-  height: 38px;
+  width: 145px;
+  height: 36px;
   margin-top: 21px;
   margin-left: 8px;
   padding: 2px 27px;
@@ -2005,14 +2057,14 @@ fieldset:nth-child(4) {
 .deals {
   display: flex;
   justify-content: center;
-  margin-bottom: 39px;
+  margin-bottom: 36px;
 }
 
 .hits-list {
   display: flex;
   justify-content: space-around;
   margin: 0;
-  padding: 0 19px;
+  padding: 0 15px;
 }
 
 .offers-list {
@@ -2046,7 +2098,7 @@ fieldset:nth-child(4) {
 
   width: 100%;
   height: 100%;
-  margin-bottom: 22px;
+  margin-bottom: 26px;
 }
 .map-wrapper {
   position: relative;
@@ -2155,7 +2207,6 @@ fieldset:nth-child(4) {
   padding: 0;
 
   color: #ffffff;
-  text-transform: capitalize;
 }
 
 
@@ -2200,7 +2251,7 @@ fieldset:nth-child(4) {
   position: relative;
 
   margin-top: -20px;
-  margin-left: 17px;
+  margin-left: 22px;
 }
 
 .filter-toggle .range-scale {
@@ -2257,7 +2308,7 @@ fieldset:nth-child(4) {
 .select-container {
   position: relative;
 
-  width: 196px;
+  width: 191px;
   height: 36px;
   margin: 0;
 
@@ -2277,8 +2328,8 @@ fieldset:nth-child(4) {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 704px;
-  height: 39px;
+  width: 700px;
+  height: 37px;
 
   font-weight: 500;
   line-height: 36px;
@@ -2326,12 +2377,12 @@ fieldset:nth-child(4) {
   top: 0;
   left: 0;
 
-  width: 22px;
+  width: 24px;
   height: 22px;
 
   background-image: url(../img/checkbox-off.svg);
   background-repeat: no-repeat;
-  background-size: 22px 22px;
+  background-size: 24px 22px;
   cursor: pointer;
   opacity: 0.8;
 }
@@ -2380,9 +2431,9 @@ fieldset:nth-child(4) {
 .fat-select + .filter-fat::before {
   content: "";
   position: absolute;
-  top: 4px;
+  top: 6px;
   right: 0;
-  left: -2px;
+  left: 1px;
 
   width: 24px;
   height: 24px;
@@ -2430,7 +2481,7 @@ fieldset:nth-child(4) {
   background-image: url("../img/select-arrow.svg");
   background-repeat: no-repeat;
   background-position: 161px center;
-  background-size: 11px 11px;
+  background-size: 17px 12px;
   border: none;
   border-radius: 20px;
   outline: none;
