--- a/css/style.css
+++ b/css/style.css
@@ -919,12 +919,12 @@ img {
 .offers-cat {
   position: relative;
 
-  margin-bottom: 58px;
+  margin-bottom: 60px;
 }
 .offers-cat::after {
   content: "";
   position: absolute;
-  bottom: -28px;
+  bottom: -31px;
   left: 12px;
 
   display: block;
@@ -1078,7 +1078,7 @@ img {
 
   box-sizing: border-box;
   width: 560px;
-  padding: 22px 21px 9px 21px;
+  padding: 26px 21px 9px 21px;
 
   color: #000000;
 
@@ -1737,7 +1737,7 @@ img {
   display: flex;
   margin: 0;
   margin-top: -24px;
-  margin-bottom: 5px;
+ 
   margin-left: 27px;
   padding: 0;
 
@@ -1826,7 +1826,7 @@ img {
 }
 
 .pagination-wrapper {
-  margin-top: 48px;
+  margin-top: 45px;
   margin-right: 19px;
 }
 
@@ -1967,13 +1967,13 @@ img {
   display: block;;
 }
 .filters {
-  margin-bottom: 34px;
+  margin-bottom: 36px;
   margin-left: 27px;
 }
 
 .filters h1 {
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 32px;
 
   font-weight: 700;
   font-size: 35px;
@@ -2070,17 +2070,17 @@ fieldset:nth-child(4) {
 .offers-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 0;
-  padding: 0 27px;
+  padding: 0 15px;
 }
 
 
 .blog-news-wrapper {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 42px;
+  margin-bottom: 43px;
 }
 
 .main-footer {
@@ -2098,7 +2098,7 @@ fieldset:nth-child(4) {
 
   width: 100%;
   height: 100%;
-  margin-bottom: 26px;
+  margin-bottom: 28px;
 }
 .map-wrapper {
   position: relative;
@@ -2111,6 +2111,12 @@ fieldset:nth-child(4) {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1200px 430px;
+}
+
+
+.footer-copyright a:hover,
+.footer-copyright a:active {
+  color: #ffbc9e;
 }
 
 .filter {
