--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,7 @@ img {
 .price-wrapper-hit::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 3px;
   left: 0;
   z-index: 300;
 
@@ -812,7 +812,7 @@ img {
 .offers-item img {
   position: relative;
 
-  margin-top: 1px;
+  margin-top: 3px;
 
   border-radius: 50%;
 }
@@ -825,25 +825,7 @@ img {
   border-radius: 50%;
 }
 
-/* .deals-button {
-  display: block;
-  box-sizing: border-box;
-  margin-top: 10px;
-  margin-left: auto;
-  padding: 9px 27px 9px 21px;
 
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  color: #ffffff;
-  text-decoration: none;
-  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
-
-  background-image: linear-gradient(#f16743, #e74b36);
-  border-radius: 22px;
-  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
-  cursor: pointer;
-} */
 
 
 .deals-button-rsb {
@@ -953,7 +935,7 @@ img {
   box-sizing: border-box;
   min-height: 280px;
   margin-right: 27px;
-  margin-bottom: 40px;
+  margin-bottom: 38px;
   margin-left: 27px;
   padding-top: 24px;
   padding-right: 10px;
@@ -1193,7 +1175,7 @@ img {
 }
 .tel-details {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 26px;
 
   font-size: 14px;
   line-height: 20px;
@@ -1853,7 +1835,7 @@ img {
   top: 35px;
   right: 0;
   z-index: 100;
-  /* display: none; */
+  display: none;
 
   box-sizing: border-box;
   width: 540px;
@@ -1865,6 +1847,7 @@ img {
 }
 .basket-table {
   width: 100%;
+  margin-top: 7px;
 
   border-collapse: collapse;
   font-size: 13px;
@@ -1876,10 +1859,12 @@ img {
 }
 .basket-delete {
   display: block;
-  width: 21px;
-  padding: 10px 4px 0 1px;
-
+  width: 12px;
+  height: 12px;
+  /*padding: 10px 4px 0 1px;*/
+  padding: 0;
   border-spacing: 0;
+  margin-right: 14px;
 }
 
 
@@ -1895,24 +1880,42 @@ img {
   content: url("../img/cross-small.svg");
 
   display: inline-block;
-  padding-top: 8px;
-  padding-left: 0;
+  /*padding-top: 8px;*/
+  /*padding-left: 0;*/
+  padding: 0;
+  width: 12px;
+  height: 12px;
 }
 
-
+.basket-product {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 21px;
+}
 
 .basket-pic {
-  padding: 0 8px 16px 0;
+  /*padding: 0 8px 16px 0;*/
+  padding: 0;
+  width: 33px;
+  height: 33px;
+  margin-right: 12px;
 }
-.basket-name {
-  display: block;
-  width: 232px;
-  padding: 8px 10px 7px 2px;
 
+.basket-name {
+  /*display: block;*/
+  width: 232px;
+  /*padding: 8px 10px 7px 2px;*/
+  padding: 0;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
   text-align: start;
+  margin-right: 15px;
+  min-height: 33px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .basket-price span {
@@ -1923,20 +1926,21 @@ img {
 }
 
 .basket-price {
-  padding: 8px 10px 7px 2px;
+  /*padding: 8px 10px 7px 2px;*/
+  padding: 0;
+  margin-right: 26px;
 }
 
 .basket-value {
   display: block;
-  margin-right: 17px;
-  padding-left: 13px;
-
+  /*padding-left: 13px;*/
+  margin-right: 10px;
+  padding: 0;
   font-weight: 400;
 }
 
 .basket-cost {
-  padding: 24px 0 18px;
-
+  padding: 17px 0 16px;
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -2123,7 +2127,7 @@ fieldset:nth-child(4) {
 
   width: 100%;
   height: 100%;
-  margin-bottom: 28px;
+  margin-bottom: 26px;
 }
 .map-wrapper {
   position: relative;
