--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   color: #ffffff;
   text-transform: none;
 
@@ -102,8 +102,8 @@ img {
 }
 
 .slide-title {
-  display: block;
-  width: 678px;
+  display: flex;
+  max-width: 678px;
   margin: 0 auto 30px;
 
   font-weight: 700;
@@ -140,7 +140,8 @@ img {
 }
 
 .slider-button:hover,
-.deals-button:hover,
+.deals-button-choco:hover,
+.deals-button-rsb:hover,
 .button-feedback:hover,
 .button-submit:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
@@ -152,7 +153,8 @@ img {
 }
 
 .slider-button:active,
-.deals-button:active,
+.deals-button-choco:active,
+.deals-button-rsb:active,
 .button-feedback:active,
 .button-submit:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#d84632), to(#e1613e));
@@ -1653,7 +1655,7 @@ img {
   content: url("../img/heart.svg");
   position: absolute;
   top: 5px;
-  left: -20px;
+  left: -24px;
 
   width: 15px;
   height: 13px;
@@ -1730,6 +1732,10 @@ img {
   padding: 0 10px 0;
   padding: 0 10px;
 
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+
   background-color: #ffffff;
   border-width: 0;
   border-radius: 5px;
@@ -1744,6 +1750,38 @@ img {
   -webkit-box-shadow: inset 0 0 0 2px #8fbdec;
           box-shadow: inset 0 0 0 2px #8fbdec;
 }
+
+.feedback-input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999999;
+}
+
+.feedback-input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999
+}
+
+.feedback-input::-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999
+}
+
+.feedback-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999
+}
+
+
+
+
 .feedback-input:hover,
 .subscription-wrapper .sub-email:hover {
   border-width: 0;
@@ -2271,6 +2309,17 @@ img {
   margin-left: 27px;
 }
 
+input[name=fat-value]:focus + label, input[name=topping]:focus + label {
+  outline-width: 2px;
+  outline-style: solid;
+  outline-color: #6997c9
+}
+select[name=sorting]:focus {
+  outline-width: 2px;
+  outline-style: solid;
+  outline-color: #6997c9
+}
+
 .filters h1 {
   margin: 0;
   margin-bottom: 32px;
@@ -2374,6 +2423,7 @@ fieldset:nth-child(4) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin: 0;
   padding: 0 15px;
@@ -2484,8 +2534,9 @@ fieldset:nth-child(4) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  width: 188px;
+  max-width: 199px;
   margin: 0;
   margin-left: 27px;
   padding: 0;
@@ -2500,6 +2551,7 @@ fieldset:nth-child(4) {
 .social-item {
   margin-right: 11px;
 }
+
 
 .footer-information-list {
   display: -webkit-box;
@@ -2542,6 +2594,7 @@ fieldset:nth-child(4) {
 .offers-list:nth-child(4n) {
   margin-right: 0;
 }
+
 
 
 .sort-filter,
